# crosscoder-model-diff-replication

./: .gitignore  Crosscoder_model_diff.ipynb  Makefile  analysis.py  buffer.py  crosscoder.py  main.py  nginx-content.conf  pyproject.toml  train.py  trainer.py  utils.py  visualize.py
src/crosscoder_model_diff_replication/: __init__.py  buffer.py  crosscoder.py  train.py  train.slurm  trainer.py
