[project]
name = "crosscoder-model-diff-replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.30.2",
    "jupyter>=1.1.1",
    "plotly>=6.0.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.15.0",
]
