[project]
name = "crosscoder_model_diff_replication"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.30.2",
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "plotly>=6.0.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformer-lens @ git+https://github.com/TransformerLensOrg/TransformerLens.git@dev",
    "sae-vis @ git+https://github.com/ckkissane/sae_vis.git@crosscoder-vis",
]

[tool.uv]
override-dependencies = [
    "transformer-lens @ git+https://github.com/TransformerLensOrg/TransformerLens.git@dev",
    "sae-vis @ git+https://github.com/ckkissane/sae_vis.git@crosscoder-vis",
]
